# GrainGPU

./: .gitignore  CMakeLists.txt  ReadMe.md  forceStats.py  test.py
src/: CMakeLists.txt
src/Film/: film.cu  film.cuh  kernelLauncher.cu  kernelLauncher.cuh  kernels.cu  kernels.cuh  layer.cu  layer.cuh  pixel.cuh
src/IHM/: graining.cpp  graining.h  grainingController.cu  grainingController.cuh  grainingscene.cpp  grainingscene.h  grainingwindow.cpp  grainingwindow.h  grainingwindow.ui  main.cu  operationswindow.cpp  operationswindow.h  operationswindow.ui  parameterswindow.cpp  parameterswindow.h  parameterswindow.ui  runThread.cpp  runThread.h
src/SPH/: grid.cuh  kernelLauncher.cu  kernelLauncher.cuh  kernels.cu  kernels.cuh  particles.cuh  sph.cu  sph.cuh  sphParameters.cu  sphParameters.cuh  world.cuh
src/utils/: cuda.cu  cuda.cuh  define.h  filters.cu  filters.cuh  functors.cu  functors.cuh  helper_cuda.h  math.cuh  memory.cuh  normalDistribution.cu  normalDistribution.cuh  stats.cu  stats.cuh  system.h  vec.cuh
src/utils/parser/: helpoption.cpp  helpoption.h  option.hpp  parser.cpp  parser.h
src/utils/parser/graining/: convotimeoption.cpp  convotimeoption.h  grainingoption.hpp  grainingoptions.h  imageoption.cpp  imageoption.h  inittimeoption.cu  inittimeoption.h  iteoption.cpp  iteoption.h  outputsizeoption.cpp  outputsizeoption.h  randomoption.cu  randomoption.h  updatetimeoption.cu  updatetimeoption.h
